--- a/index.html
+++ b/index.html
@@ -15,4 +15,10 @@ layout: default
       <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
     </article>
   {% endfor %}
+
+  {% for page in site.pages %}
+    <url>
+        <loc>http://blog.dside.ru{{ page.url | remove: 'index.html' }}</loc>
+    </url>
+    {% endfor %}
 </div>
