--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
     </article>
   {% endfor %}
 
-  {% for page in site.pages %}
+  {% for page in github.repositories %}
     <url>
         <loc>http://blog.dside.ru{{ page.url | remove: 'index.html' }}</loc>
     </url>
